--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.second__section {
+    @apply border-solid border-2 border-black rounded w-2/3 mx-auto absolute left-1/2 -translate-x-1/2 top-3/4 z-10;
+}
+
+.third__section {
+    @apply border-solid border-2 border-black rounded p-4 w-2/3 mx-auto absolute left-1/2 -translate-x-1/2 bottom-0;
+}
+
+
+.assign__white {
+    @apply border-solid border-2 border-newBlue rounded-lg uppercase text-newBlue font-semibold py-1 text-center;
+}
+
+.assign__blue {
+    @apply border-solid border-2 border-newBlue rounded-lg uppercase bg-newBlue text-white font-semibold py-2 text-center w-11/12 mx-auto mb-4;
+}
